# rust-amazon-ad-api

./: .clinerules  .cursorrules  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: budget_rules.rs  campaigns_list.rs  profile_management.rs  rate_limiting.rs  reports_download.rs
src/: lib.rs
src/apis/: body.rs  configuration.rs  helpers.rs  macros.rs  mod.rs  pagination.rs  params.rs
src/apis/cross/: account.rs  advertising_test_account.rs  attribution.rs  audiences.rs  billing.rs  brand_metrics.rs  creative_assets.rs  eligibility.rs  exports.rs  history.rs  insights.rs  invoices.rs  localization.rs  manager_accounts.rs  metadata.rs  mod.rs  portfolios.rs  profiles.rs  recommendations.rs  reports.rs  stores.rs  stream.rs  (+1 more)
src/client/: auth.rs  client.rs  config.rs  crypto.rs  download.rs  mod.rs  rate_limiter.rs
src/client_apis/: cross.rs  dsp.rs  mod.rs  sb.rs  sd.rs  sp.rs
src/models/: common.rs  marketplaces.rs  mod.rs
tasks/: 2026-07-23-13-safe-query-encoding-serde-urlencoded.md  2026-07-23-14-simd-json-acceleration-feature.md  2026-07-23-15-date-time-strict-typing.md  2026-07-23-16-metrics-telemetry-instrumentation.md  2026-07-23-17-multicodec-brotli-deflate-compression.md  2026-07-23-18-mime-guess-media-upload.md  2026-07-23-19-cancellation-safety-rate-limiter.md  2026-07-23-22-ams-v2-stream-datasets.md  2026-07-23-23-sp-theme-targeting-extended-fields.md  2026-07-23-24-compact-str-memory-optimization.md  2026-07-23-25-getrandom-crypto-entropy.md  2026-07-23-27-futures-util-batch-concurrency.md  README.md  TEMPLATE.md
tasks/done_tasks/: 2026-07-23-01-panic-safety-error-handling.md  2026-07-23-02-rate-limiter-precision.md  2026-07-23-03-client-allocation-optimization.md  2026-07-23-04-wiremock-integration-tests.md  2026-07-23-05-async-io-security-hardening.md  2026-07-23-06-auto-pagination-streams.md  2026-07-23-07-model-traits-header-cleanup.md  2026-07-23-08-streaming-gzip-decompression.md  2026-07-23-09-secrets-protection-secrecy.md  2026-07-23-10-lockfree-ratelimiter-dashmap.md  2026-07-23-11-single-item-api-ergonomics.md  2026-07-23-12-lockfree-token-cache-arcswap.md  2026-07-23-13-safe-query-encoding-serde-urlencoded.md  2026-07-23-14-simd-json-acceleration-feature.md  2026-07-23-15-date-time-strict-typing.md  2026-07-23-16-metrics-telemetry-instrumentation.md  2026-07-23-17-multicodec-brotli-deflate-compression.md  2026-07-23-18-mime-guess-media-upload.md  2026-07-23-19-cancellation-safety-rate-limiter.md  2026-07-23-20-rate-limit-reset-ms-headers.md  2026-07-23-21-async-report-polling-helper.md  2026-07-23-22-ams-v2-stream-datasets.md  2026-07-23-23-sp-theme-targeting-extended-fields.md  2026-07-23-24-compact-str-memory-optimization.md  2026-07-23-25-getrandom-crypto-entropy.md  2026-07-23-26-percent-encoding-url-paths.md  2026-07-23-27-futures-util-batch-concurrency.md  2026-07-23-upstream-sync.md
tests/integration/: client_tests.rs
(+105 files in other folders)
