[package]
name = "amazon-ad-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Unofficial Rust client for the Amazon Advertising API — Sponsored Products, Sponsored Brands, Sponsored Display, and DSP"
license = "MIT"
repository = "https://github.com/denisneuf/rust-amazon-ad-api"
homepage = "https://github.com/denisneuf/rust-amazon-ad-api"
documentation = "https://docs.rs/amazon-ad-api"
keywords = ["amazon", "advertising", "api", "ads", "amazon-ads"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Daniel Alvaro <denisneuf@hotmail.com>"]

[lib]
crate-type = ["lib"]

[features]
default = ["client", "sp", "sb", "sd"]
client = [
    "reqwest",
    "reqwest-middleware",
    "reqwest-retry",
    "reqwest-tracing",
    "tokio",
    "flate2",
    "aes",
    "cbc",
    "toml",
    "time",
    "url",
    "anyhow",
    "moka",
    "async-stream",
    "futures-core",
    "async-compression",
    "tokio-util",
    "arc-swap",
    "percent-encoding",
    "getrandom",
]
sp = []
sb = []
sd = []
dsp = []
cross = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", default-features = false, features = ["base64", "std", "macros"] }
md-5 = "0.10"
derive_builder = "0.20"
thiserror = "2"
base64 = "0.22"
bytes = "1"
tracing = "0.1"

# Client feature dependencies
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"], optional = true }
reqwest-middleware = { version = "0.4", features = ["json", "multipart"], optional = true }
reqwest-retry = { version = "0.7", optional = true }
reqwest-tracing = { version = "0.5", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util"], optional = true }
flate2 = { version = "1", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["std"], optional = true }
toml = { version = "0.8", optional = true }
time = { version = "0.3", features = ["serde", "formatting", "parsing"], optional = true }
url = { version = "2", optional = true }
anyhow = { version = "1", optional = true }
moka = { version = "0.12", features = ["sync"], optional = true }
arc-swap = { version = "1.7", optional = true }
percent-encoding = { version = "2.3", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
